--- a/src/html/blocks/sched-hall.html
+++ b/src/html/blocks/sched-hall.html
@@ -2,7 +2,7 @@
 <ul class="schedule__time">
     @@for(var i = 0; i < time.length; i++){
 
-    <li><button class="schedule__btn-hall">`+time[i]+`</button></li>
+    <li class="schedule__li"><button class="schedule__btn-hall">`+time[i]+`</button></li>
     }
 
 </ul>
