--- a/src/html/film.html
+++ b/src/html/film.html
@@ -41,34 +41,36 @@
 
     </div>
 
-
-
     <div class="schedule">
         <p class="schedule__title">Расписание</p>
+        <div class="schedule__week-back">
 
-        <ul class="schedule__week">
-            <li>
-                <button class="schedule__btn-week">Пн, 9 янв</button>
-            </li>
-            <li>
-                <button class="schedule__btn-week">Вт, 10 янв</button>
-            </li>
-            <li>
-                <button class="schedule__btn-week">Ср, 11 янв</button>
-            </li>
-            <li>
-                <button class="schedule__btn-week">Чт, 12 янв</button>
-            </li>
-            <li>
-                <button class="schedule__btn-week">Пт, 13 янв</button>
-            </li>
-            <li>
-                <button class="schedule__btn-week">Сб, 14 янв</button>
-            </li>
-            <li>
-                <button class="schedule__btn-week">Вс, 15 янв</button>
-            </li>
-        </ul>
+            <ul class="schedule__week">
+                <li class="schedule__week-li">
+                    <button class="schedule__btn-week">Пн, 9 янв</button>
+                </li>
+                <li class="schedule__week-li">
+                    <button class="schedule__btn-week">Вт, 10 янв</button>
+                </li>
+                <li class="schedule__week-li">
+                    <button class="schedule__btn-week">Ср, 11 янв</button>
+                </li>
+                <li class="schedule__week-li">
+                    <button class="schedule__btn-week">Чт, 12 янв</button>
+                </li>
+                <li class="schedule__week-li">
+                    <button class="schedule__btn-week">Пт, 13 янв</button>
+                </li>
+                <li class="schedule__week-li">
+                    <button class="schedule__btn-week">Сб, 14 янв</button>
+                </li>
+                <li class="schedule__week-li">
+                    <button class="schedule__btn-week">Вс, 15 янв</button>
+                </li>
+            </ul>
+
+        </div>
+
 
         @@loop('blocks/sched-hall.html', [
         {
@@ -85,7 +87,6 @@
         }]
         )
 
-
         <p class="schedule__place">Выбор места</p>
 
         <div class="choice">
@@ -94,14 +95,14 @@
                 <hr class="screen__line">
 
                 <div class="screen__seat">
-                    <table>
+                    <table class="screen__table">
                         <caption></caption>
                         <tr>
                             <th class="screen__name">Ряд</th>
 
                         </tr>
                         <tr>
-                            <td>1</td>
+                            <td class="screen__td">1</td>
                             <td> <button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
@@ -114,7 +115,7 @@
                             <td><button class="screen__btn"></button></td>
                         </tr>
                         <tr>
-                            <td>2</td>
+                            <td class="screen__td">2</td>
                             <td> <button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
@@ -127,7 +128,7 @@
                             <td><button class="screen__btn"></button></td>
                         </tr>
                         <tr>
-                            <td>3</td>
+                            <td class="screen__td">3</td>
                             <td> <button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
@@ -140,7 +141,7 @@
                             <td><button class="screen__btn"></button></td>
                         </tr>
                         <tr>
-                            <td>4</td>
+                            <td class="screen__td">4</td>
                             <td> <button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
@@ -153,7 +154,7 @@
                             <td><button class="screen__btn"></button></td>
                         </tr>
                         <tr>
-                            <td>5</td>
+                            <td class="screen__td">5</td>
                             <td> <button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
@@ -166,7 +167,7 @@
                             <td><button class="screen__btn"></button></td>
                         </tr>
                         <tr>
-                            <td>6</td>
+                            <td class="screen__td">6</td>
                             <td> <button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
@@ -178,8 +179,6 @@
                             <td><button class="screen__btn"></button></td>
                             <td><button class="screen__btn"></button></td>
                         </tr>
-
-
 
                     </table>
                 </div>
@@ -192,8 +191,8 @@
                 <p class="choice__what">Места</p>
                 <p class="choice__what-choice">2 ряд - 8, 9</p>
 
-                <p class="choice__sum">Сумма:</p>
-                <p class="choice__sum-result">500 ₽</p>
+                    <p class="choice__sum">Сумма: 500 ₽</p>
+
                 <button class="button">Купить</button>
 
 
@@ -208,7 +207,7 @@
 
 
 
-
+    @@include('blocks/pp.html')
 </body>
 
 </html>
