оформлен pop-up с тенью

--- a/src/html/film.html
+++ b/src/html/film.html
@@ -192,9 +192,9 @@
                 <p class="choice__what-choice">2 ряд - 8, 9</p>
 
                     <p class="choice__sum">Сумма: 500 ₽</p>
-
+            <a href=@@href>
                 <button class="button">Купить</button>
-
+            </a>
 
             </div>
 
